# GUIDE-AL

./: .gitignore  CONTRIBUTION.md  README.md  dodo.py  mypy.ini  pyproject.toml  setup.cfg
guide_active_learning/: __init__.py
guide_active_learning/ActiveLearning/: active_learning.py  active_learning_misc.py  investigation.py  query.py
guide_active_learning/Data/model/autos_results/: results__autos__extracted.pickle
guide_active_learning/Data/model/cancer_results/: results__cancer__extracted.pickle
guide_active_learning/Data/model/credit_results/: results__credit__extracted.pickle
guide_active_learning/Data/model/fish_results/: results__fish__extracted.pickle
guide_active_learning/Data/model/glass_results/: results__glass__extracted.pickle
guide_active_learning/Data/model/heart_results/: results__heart__extracted.pickle
guide_active_learning/Data/model/iris_results/: results__iris__extracted.pickle
guide_active_learning/Data/model/segmentation_results/: results__segmentation__extracted.pickle
guide_active_learning/Data/model/wheat_results/: results__wheat__extracted.pickle
guide_active_learning/GUIDE/: guide_analysis.py  guide_ensemble.py  guide_misc.py  guide_tree.py  split_points.py  splitting.py
guide_active_learning/RotationForest/: RotationForest.py  __init__.py
guide_active_learning/analysis/: analyse_results.py
guide_active_learning/core/: _math.py  _misc.py  _visualisation.py  io.py
scripts/: benchmark_dataset_script.py  settings.ini
