[metadata]
name = guide_active_learning
platforms = any
description = Framework for Active Learning built GUIDE Algorithmus
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = python, GUIDE, Decision Trees, Active Learning
url = https://ds-juist.init.th-owl.de/j.bueltemeier/guide_active_learning
author = Justus Köster, Julian Bültemeier, Marvin Schöne
author_email = jubue@gmx.net
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
project_urls =
    Source = https://ds-juist.init.th-owl.de/j.bueltemeier/guide_active_learning
    Tracker = https://ds-juist.init.th-owl.de/j.bueltemeier/guide_active_learning/-/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas
    numpy
    joblib
    graphviz
    scipy
    openpyxl
    seaborn
    dot2tex
    scikit-learn
    matplotlib

[options.packages.find]
exclude =
    tests*
